# tauri-presentation

./: CLAUDE.md  README.md  eslint.config.ts  mise.toml  package.json
.github/workflows/: ci.yaml
.mise/tasks/: build  ci  install-fedora-deps  install-ubuntu-deps
docs/: install-fedora-deps.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: async_task.rs  calculator.rs  greet.rs  mod.rs  monte_carlo.rs  prime_sieve.rs  progress.rs  system_info.rs
src/components/: demo-card.tsx
src/components/demos/: async-demo.tsx  calculator-demo.tsx  dialogs-demo.tsx  events-demo.tsx  greet-demo.tsx  index.ts  monte-carlo-demo.tsx  notifications.tsx  prime-sieve-demo.tsx  system-info-demo.tsx
